fix stackoverflow answers sometimes not showing up

--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -22,16 +22,16 @@ body {
 	margin-top: 1em
 }
 .result-engines {
-  float: right;
-  font-size: .75em;
-  opacity: .5
+	float: right;
+	font-size: .75em;
+	opacity: .5
 }
 .result-engine {
 	margin-left: .5em;
 	z-index: 1;
 	position: relative;
 }
-.result a, #answer a {
+.result a, #answer a, #sidebar a {
 	text-decoration: none
 }
 .result-title {
@@ -135,7 +135,8 @@ pre {
 	display: none
 }
 .sidebar-title {
-	color: var(--result-title)
+	color: var(--result-title);
+	margin-top: .5em;
 }
 @media only screen and (min-width: 1340px) {
 	aside {
@@ -265,8 +266,8 @@ input[type=checkbox]:checked ~ .checkbox:after {
 
 @media only screen and (min-width: 965px) {
 	#debug-dropdown {
-	  position: relative;
-	  left: 100%;
-	  height: 0;
+		position: relative;
+		left: 100%;
+		height: 0;
 	}
-  }
+}
